--- a/bower.json
+++ b/bower.json
@@ -18,5 +18,11 @@
     "r.js": "~2.1.11",
     "jquery": "~2.1.0",
     "cajon": "~0.2.0"
+  },
+  "devDependencies": {
+    "r.js": "~2.1.11",
+    "jquery": "~2.1.0",
+    "cajon": "~0.2.0",
+    "almond": "~0.2.9"
   }
 }
