--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "r.js": "~2.1.11",
     "jquery": "~2.1.0",
-    "cajon": "~0.2.0"
+    "cajon": "~0.2.0",
+    "almond": "~0.2.9"
   }
 }
