added moduleC which loads moduleA

--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
     "r.js": "~2.1.11",
     "jquery": "~2.1.0",
     "cajon": "~0.2.0",
-    "almond": "~0.2.9"
+    "almond": "~0.2.9",
+    "bootstrap": "~3.1.1"
   }
 }
